# Smart-Inventory-Managment

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/audit_log_service/: api.py  crud.py  models.py  schemas.py  services.py
app/category_service/: api.py  crud.py  models.py  schemas.py  services.py
app/dashboard_service/: api.py  crud.py  schemas.py  services.py
app/inventory_service/: api.py  crud.py  models.py  schemas.py  services.py
app/ml_service/: api.py  pipeline.py  schemas.py  services.py
app/product_service/: api.py  crud.py  models.py  schemas.py  services.py
app/store_product_service/: api.py  crud.py  models.py  schemas.py  services.py
app/store_service/: api.py  crud.py  models.py  schemas.py  services.py
app/transaction_service/: api.py  crud.py  models.py  schemas.py  services.py
app/user_service/: api.py  crud.py  dependencies.py  models.py  schemas.py  services.py
app/user_service/tests/: test_auth.py
core/: config.py  database.py  exceptions.py  logging.py  middleware.py  router.py  schemas.py  security.py  utils.py
doc/: ML_STUDY_REPORT.md
infrastructure/: redis.py
scripts/: init_db.py
