# /pyproject.toml
[tool.poetry]
name = "ai-inventory-saas"
version = "0.1.0"
description = "AI-Powered Inventory Management SaaS for Indian Retail"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "core" },
    { include = "scripts" },
    { include = "infrastructure" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.18"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
rq = "^1.15.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
requests = "^2.31.0"
razorpay = "^1.4.2"
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"
babel = "^2.14.0"
authlib = "^1.2.1"
typer = "^0.12.3"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pre-commit = "^3.7.0"

[tool.poetry.scripts]
init-db = "scripts.init_db:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"